[package]
name = "pare"
version = "0.1.0-beta"
edition = "2021"
authors = ["OxidizedSchale <3997101522@qq.com>"]
description = "PARE's Accelerated Runtime Elimination - Stripping Python naked for pure C performance."
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rustpython-parser = "0.3.1"
tempfile = "3.10"
colored = "2.1"

[profile.release]
opt-level = 3          
lto = true              
codegen-units = 1       
panic = "abort"         
strip = true            
